--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.mobileexam.deypalubos">
 
     <application
         android:allowBackup="true"
@@ -12,17 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMorty"
         tools:targetApi="31">
+
+        <!-- Fix here: Change .RickAndMorty to .MainActivity -->
         <activity
-            android:name=".RickAndMorty"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.RickAndMorty">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
